cli/tests/testdata/test/steps/invalid_usage.out
[WILDCARD]
running 7 tests from ./test/steps/invalid_usage.ts
capturing ...
  some step ... ok ([WILDCARD])
FAILED ([WILDCARD])
top level missing await ...
  step ... pending ([WILDCARD])
FAILED ([WILDCARD])
inner missing await ...
  step ...
    inner ... pending ([WILDCARD])
      error: Error: Parent scope completed before test step finished execution. Ensure all steps are awaited (ex. `await t.step(...)`).
          at [WILDCARD]
          at async TestContext.step [WILDCARD]
  FAILED ([WILDCARD])
    error: Error: There were still test steps running after the current scope finished execution. Ensure all steps are awaited (ex. `await t.step(...)`).
        await t.step("step", (t) => {
        ^
        at [WILDCARD]
        at async fn ([WILDCARD]/invalid_usage.ts:[WILDCARD])
FAILED ([WILDCARD])
parallel steps with sanitizers ...
  step 1 ... pending ([WILDCARD])
  step 2 ... FAILED ([WILDCARD])
    error: Error: Cannot start test step while another test step with sanitizers is running.
     * parallel steps with sanitizers > step 1
      await t.step("step 2", () => {});
              ^
        at [WILDCARD]
        at [WILDCARD]/invalid_usage.ts:[WILDCARD]
FAILED ([WILDCARD])
parallel steps when first has sanitizer ...
  step 1 ... pending ([WILDCARD])
  step 2 ... FAILED ([WILDCARD])
    error: Error: Cannot start test step while another test step with sanitizers is running.
     * parallel steps when first has sanitizer > step 1
      await t.step({
              ^
        at [WILDCARD]
        at [WILDCARD]/invalid_usage.ts:[WILDCARD]
FAILED ([WILDCARD])
parallel steps when second has sanitizer ...
  step 1 ... ok ([WILDCARD])
  step 2 ... FAILED ([WILDCARD])
    error: Error: Cannot start test step with sanitizers while another test step is running.
     * parallel steps when second has sanitizer > step 1
      await t.step({
              ^
        at [WILDCARD]
        at [WILDCARD]/invalid_usage.ts:[WILDCARD]
FAILED ([WILDCARD])
parallel steps where only inner tests have sanitizers ...
  step 1 ...
    step inner ... ok ([WILDCARD])
  ok ([WILDCARD])
  step 2 ...
    step inner ... FAILED ([WILDCARD])
      error: Error: Cannot start test step with sanitizers while another test step is running.
       * parallel steps where only inner tests have sanitizers > step 1
            await t.step({
                    ^
          at [WILDCARD]
          at [WILDCARD]/invalid_usage.ts:[WILDCARD]
  FAILED ([WILDCARD])
FAILED ([WILDCARD])

 ERRORS 

capturing => ./test/steps/invalid_usage.ts:[WILDCARD]
error: Error: Cannot run test step after parent scope has finished execution. Ensure any `.step(...)` calls are executed before their parent scope completes execution.
  await capturedContext.step("next step", () => {});
                        ^
    at TestContext.step ([WILDCARD])
    at [WILDCARD]/invalid_usage.ts:[WILDCARD]

top level missing await => ./test/steps/invalid_usage.ts:[WILDCARD]
error: Error: There were still test steps running after the current scope finished execution. Ensure all steps are awaited (ex. `await t.step(...)`).
    at postValidation [WILDCARD]
    at testStepSanitizer ([WILDCARD])
    [WILDCARD]

inner missing await => ./test/steps/invalid_usage.ts:[WILDCARD]
error: Error: 1 test step failed.
    at [WILDCARD]

parallel steps with sanitizers => ./test/steps/invalid_usage.ts:[WILDCARD]
error: Error: There were still test steps running after the current scope finished execution. Ensure all steps are awaited (ex. `await t.step(...)`).
    at postValidation [WILDCARD]
    at testStepSanitizer ([WILDCARD])
    [WILDCARD]

parallel steps when first has sanitizer => ./test/steps/invalid_usage.ts:[WILDCARD]
error: Error: 1 test step failed.
    at runTest ([WILDCARD])
    at [WILDCARD]

parallel steps when second has sanitizer => ./test/steps/invalid_usage.ts:[WILDCARD]
error: Error: 1 test step failed.
    at runTest ([WILDCARD])
    at [WILDCARD]

 FAILURES 

capturing => ./test/steps/invalid_usage.ts:[WILDCARD]
top level missing await => ./test/steps/invalid_usage.ts:[WILDCARD]
inner missing await => ./test/steps/invalid_usage.ts:[WILDCARD]
parallel steps with sanitizers => ./test/steps/invalid_usage.ts:[WILDCARD]
parallel steps when first has sanitizer => ./test/steps/invalid_usage.ts:[WILDCARD]
parallel steps when second has sanitizer => ./test/steps/invalid_usage.ts:[WILDCARD]
parallel steps where only inner tests have sanitizers => ./test/steps/invalid_usage.ts:[WILDCARD]

FAILED | 0 passed (4 steps) | 7 failed (10 steps) ([WILDCARD])

error: Test failed
